--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,6 +109,8 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
+    implementation "androidx.camera:camera-core:1.1.0"
+	implementation "androidx.camera:camera-camera2:1.1.0"
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
